--- a/ant.properties
+++ b/ant.properties
@@ -7,17 +7,19 @@ dist.package.name = ${project.name}-${version.number}
 deploy.package.name = ${project.name}-${version.number}.zip
 runtime.js.path = /${dist.package.name}/${product.name}-min.js
 
-build.dir = ${basedir}/build
+build.dir = ${backplanejs.base.dir}/build
 output.dir = ${build.dir}/output/${dist.package.name}
-deploy.root.dir = ${basedir}/deploy
+deploy.root.dir = ${backplanejs.base.dir}/deploy
 deploy.dir = ${deploy.root.dir}/${dist.package.name}
 doc.dir = ${deploy.root.dir}/docs
-tools.dir = ${basedir}/tools
+helper-apps.dir = ${backplanejs.base.dir}/tools
 reports.dir = ${build.dir}/output/${dist.package.name}/reports
 
-third-party.dir = third-party
+backplanejs.lib.dir = ${backplanejs.base.dir}/deploy
 
-src.dir = ${basedir}
+third-party.dir = ${backplanejs.base.dir}/third-party
+
+src.dir = ${backplanejs.base.dir}
 rdfa.src.dir = ${src.dir}/rdfa/src
 
 selenium.rc.port = 4444
