Added gae.application.root property to build.

--- a/ant.properties
+++ b/ant.properties
@@ -19,6 +19,8 @@ backplanejs.lib.dir = ${backplanejs.base.dir}/deploy
 
 third-party.dir = ${backplanejs.base.dir}/third-party
 
+gae.application.root = ${deploy.root.dir}
+
 src.dir = ${backplanejs.base.dir}
 rdfa.src.dir = ${src.dir}/rdfa/src
 
