--- a/copy-to-my.ant.properties
+++ b/copy-to-my.ant.properties
@@ -9,6 +9,12 @@
 #
 #gae.username = <your user name>
 #gae.password = <your password>
+#
+# Note that ant.properties contains a default value for gae.windows.install.root, so
+# this won't need to be modified unless you changed the default settings during
+# installation.
+#
+#gae.windows.install.root = location/of/dev_appserver.py
 
 #
 # Selenium RC parameters
