Fixed mistakes in GAE path.

--- a/ant.properties
+++ b/ant.properties
@@ -20,7 +20,11 @@ backplanejs.lib.dir = ${backplanejs.base.dir}/deploy
 third-party.dir = ${backplanejs.base.dir}/third-party
 
 gae.application.root = ${deploy.root.dir}
-gae.windows.install.root = C:\Program Files\Google\google_appengine
+#
+# This is the default directory. Override in my.ant.properties if
+# you need to.
+#
+gae.windows.install.dir = C:/Program Files/Google/google_appengine
 
 src.dir = ${backplanejs.base.dir}
 rdfa.src.dir = ${src.dir}/rdfa/src
