--- a/build.xml
+++ b/build.xml
@@ -56,11 +56,7 @@
 		This is a bit of a hack to work around Windows problems. There may
 		be a better way to do this.
 	-->
-	<condition property="gae.app.name.1" value="python" else="dev_appserver.py">
-		<os family="windows" />
-	</condition>
-
-	<condition property="gae.app.name.2" value="${gae.windows.install.dir}\dev_appserver.py" else="">
+	<condition property="gae.app.name" value="dev_appserver.bat" else="dev_appserver.py">
 		<os family="windows" />
 	</condition>
 
@@ -594,12 +590,11 @@
 		</condition>
 	</target>
 
-	<target name="pre-start-local-gae" description="Stub." />
+	<target name="-pre-start-local-gae" description="Stub." />
 
-	<target name="start-local-gae" depends="-check-local-gae, pre-start-local-gae" unless="local-gae-started">
+	<target name="start-local-gae" depends="-check-local-gae, -pre-start-local-gae" unless="local-gae-started">
 		<echo level="info" message="Starting GAE for application '${gae.application.root}'" />
-		<exec executable="${gae.app.name.1}">
-			<arg value="${gae.app.name.2}" />
+		<exec executable="${gae.app.name}">
 			<arg value="--port" />
 			<arg value="${gae.port}" />
 			<arg value="${gae.application.root}" />
