Factored tools out of build.xml into separate file, then also factored GAE-related tasks into a further file.
--HG--
rename : build.xml => tools/tools.xml

--- a/ant.properties
+++ b/ant.properties
@@ -7,29 +7,25 @@ dist.package.name = ${project.name}-${version.number}
 deploy.package.name = ${project.name}-${version.number}.zip
 runtime.js.path = /${dist.package.name}/${product.name}-min.js
 
-build.dir = ${backplanejs.base.dir}/build
+build.dir = build
 output.dir = ${build.dir}/output/${dist.package.name}
-deploy.root.dir = ${backplanejs.base.dir}/deploy
+deploy.root.dir = deploy
 deploy.dir = ${deploy.root.dir}/${dist.package.name}
 doc.dir = ${deploy.root.dir}/docs
-helper-apps.dir = ${backplanejs.base.dir}/tools
 reports.dir = ${build.dir}/output/${dist.package.name}/reports
 
-backplanejs.lib.dir = ${backplanejs.base.dir}/deploy
+backplanejs.lib.dir = deploy
 
-third-party.dir = ${backplanejs.base.dir}/third-party
+third-party.dir = third-party
 
-gae.application.root = ${deploy.root.dir}
-#
-# This is the default directory. Override in my.ant.properties if
-# you need to.
-#
-gae.windows.install.dir = C:/Program Files/Google/google_appengine
-
-src.dir = ${backplanejs.base.dir}
+src.dir = .
 rdfa.src.dir = ${src.dir}/rdfa/src
 
 selenium.rc.port = 4444
 selenium.rc.host = localhost
-gae.port = 8080
-gae.host = localhost
+
+#
+# Settings for the backplanejs tools.
+#
+backplanejs-tools.dir = tools
+gae.application.root = ${deploy.root.dir}
