Factored Selenium RC tasks out of build.xml, into their own file. Also moved associated .jar files into their own directory.
--HG--
rename : tools/selenium-java-client-driver.jar => tools/selenium-rc/selenium-java-client-driver.jar
rename : tools/selenium-server.jar => tools/selenium-rc/selenium-server.jar

--- a/copy-to-my.ant.properties
+++ b/copy-to-my.ant.properties
@@ -9,15 +9,9 @@
 #
 #gae.username = <your user name>
 #gae.password = <your password>
-#
-# Note that ant.properties contains a default value for gae.windows.install.root, so
-# this won't need to be modified unless you changed the default settings during
-# installation.
-#
-#gae.windows.install.root = location/of/dev_appserver.py
 
 #
 # Selenium RC parameters
 #
-selenium.rc.params = -firefoxProfileTemplate 'path/to/profile'
-selenium.rc.browsers =  '*firefox3 path/to/firefox'
+selenium-rc.params = -firefoxProfileTemplate 'path/to/profile'
+selenium-rc.browsers =  '*firefox3 path/to/firefox'
