Further factoring of Ant tasks, with YUI Test/Selenium driver moved into own directory, with own Ant file.
--HG--
rename : tools/tests/unit-tests.xml => build/test/test-list.xml
rename : tools/tests/unit-test-runner.js => build/test/unit-test-runner.js
rename : tools/tests/unit.html => build/test/unit.html
rename : tools/yuitest-selenium-driver-0.4.4.jar => tools/yuitest-selenium/yuitest-selenium-driver-0.4.4.jar

--- a/ant.properties
+++ b/ant.properties
@@ -1,28 +1,46 @@
-product.name = backplane
-project.name = backplanejs
 project.url = http://backplanejs.googlecode.com
-version.number = 0.6.4
 yui.version = 2.8.0
-dist.package.name = ${project.name}-${version.number}
-deploy.package.name = ${project.name}-${version.number}.zip
 runtime.js.path = /${dist.package.name}/${product.name}-min.js
-
-build.dir = build
-output.dir = ${build.dir}/output/${dist.package.name}
-deploy.root.dir = deploy
-deploy.dir = ${deploy.root.dir}/${dist.package.name}
-doc.dir = ${deploy.root.dir}/docs
-reports.dir = ${build.dir}/output/${dist.package.name}/reports
 
 backplanejs.lib.dir = deploy
 
 third-party.dir = third-party
 
-src.dir = .
 rdfa.src.dir = ${src.dir}/rdfa/src
 
 #
-# Settings for the backplanejs tools.
+# B A C K P L A N E J S   T O O L S
+# =================================
+#
+
+#
+# Where to find the tools.
 #
 backplanejs-tools.dir = tools
+
+#
+# Where to find the source and test files to build.
+#
+build.dir = build
+
+#
+# The actual source is usually at ${build.dir}/src, so we need to override this.
+#
+src.dir = .
+
+#
+# The location for compiled files, packages for deployment, resources, and so on.
+#
+target.dir = target
+
+#
+# The product and project names, and the version number.
+#
+product.name = backplane
+project.name = backplanejs
+version.number = 0.6.4
+
+#
+# The root directory for GAE.
+#
 gae.application.root = ${deploy.root.dir}
