--- a/tools/ant.properties
+++ b/tools/ant.properties
@@ -5,7 +5,7 @@ dist.package.name = ${project.name}
 deploy.package.name = ${project.name}-${version.number}.zip
 
 #
-# The target and build directories must be defined.
+# The target and build directories must be already defined.
 #
 
 #
@@ -29,4 +29,9 @@ reports.dir = ${output.dir}/reports
 deploy.root.dir = ${target.dir}/deploy
 deploy.dir = ${deploy.root.dir}/${dist.package.name}
 
-doc.dir = ${deploy.root.dir}/docs
+#
+# The 'site' directory is for the documentation web-site.
+#
+site.dir = ${target.dir}/site
+site.docs.dir = ${site.dir}/docs
+site.docs.project.url = http://example.com
