--- a/ant.properties
+++ b/ant.properties
@@ -1,4 +1,3 @@
-project.url = http://backplanejs.googlecode.com
 yui.version = 2.8.0
 runtime.js.path = /${dist.package.name}/${product.name}-min.js
 
@@ -38,7 +37,12 @@ target.dir = target
 #
 product.name = backplane
 project.name = backplanejs
-version.number = 0.6.4
+version.number = 0-6-4
+
+#
+# Documentation information.
+#
+site.docs.project.url = http://backplanejs.googlecode.com
 
 #
 # The root directory for GAE.
