Fixed problem running GAE's appcfg under Windows.

--- a/copy-to-my.ant.properties
+++ b/copy-to-my.ant.properties
@@ -9,6 +9,7 @@
 #
 #gae.username = <your user name>
 #gae.password = <your password>
+#gae.windows.install.dir = C:/Progra~1/Google/google_appengine
 
 #
 # Selenium RC parameters
