Moved references to YUI to separate files as part of 'any library' work.
Fixes issue 11.
Fixes issue 14.

--- a/ant.properties
+++ b/ant.properties
@@ -1,4 +1,3 @@
-yui.version = 2.8.0
 runtime.js.path = /${dist.package.name}/${product.name}-min.js
 
 backplanejs.lib.dir = deploy
@@ -38,6 +37,12 @@ target.dir = target
 product.name = backplane
 project.name = backplanejs
 version.number = 0-6-4
+
+#
+# The platform.
+#
+platform.name = yui
+platform.version = 2.8.0
 
 #
 # Documentation information.
