--- a/tools/ant.properties
+++ b/tools/ant.properties
@@ -4,6 +4,9 @@ version.number = SNAPSHOT
 dist.package.name = ${project.name}
 deploy.package.name = ${project.name}-${version.number}.zip
 
+platform.name = some-platform
+platform.version = SNAPSHOT
+
 #
 # The target and build directories must be already defined.
 #
