--- a/build.xml
+++ b/build.xml
@@ -265,7 +265,8 @@
 		<copy todir="${gae.application.root}" failonerror="true">
 			<fileset dir="${backplanejs.tools.base.dir}/GoogleAppEngine" includes="app.yaml"/>
 			<filterset>
-				<filter token="backplanejs.lib.dir" value="${backplanejs.lib.dir}"/>
+				<filter token="project.name" value="${project.name}"/>
+				<filter token="version.number" value="${version.number}"/>
 			</filterset>
 		</copy>
 	</target>
