Added global filtering support to Ant tasks, rather than doing it on a per-copy basis. Modified CSS generation so that the file is created directly in the assets directory.

--- a/build.xml
+++ b/build.xml
@@ -262,12 +262,8 @@
 	</target>
 
 	<target name="-pre-start-local-gae">
-		<copy todir="${gae.application.root}" failonerror="true">
+		<copy todir="${gae.application.root}" failonerror="true" filtering="true">
 			<fileset dir="${backplanejs.tools.base.dir}/GoogleAppEngine" includes="app.yaml"/>
-			<filterset>
-				<filter token="project.name" value="${project.name}"/>
-				<filter token="version.number" value="${version.number}"/>
-			</filterset>
 		</copy>
 	</target>
 </project>
