Added host address as parameter to GAE.

--- a/copy-to-my.ant.properties
+++ b/copy-to-my.ant.properties
@@ -9,6 +9,8 @@
 #
 #gae.username = <your user name>
 #gae.password = <your password>
+#gae.host = <your host>
+#gae.port = 8080
 #gae.windows.install.dir = C:/Progra~1/Google/google_appengine
 
 #
