--- a/ant.properties
+++ b/ant.properties
@@ -5,6 +5,8 @@ backplanejs.lib.dir = deploy
 third-party.dir = third-party
 
 rdfa.src.dir = ${src.dir}/rdfa/src
+xforms.dir = ${src.dir}/third-party/uxf
+xforms.src.dir = ${xforms.dir}/src
 
 #
 # B A C K P L A N E J S   T O O L S
