--- a/build.xml
+++ b/build.xml
@@ -17,7 +17,7 @@
    -->
 <project name="backplanejs" default="help" basedir=".">
 	<description>
-		Ant project for various backplanejs tasks.
+		Ant project for building and managing the backplanejs library.
 	</description>
 
 	<import file="tools/tools.xml" />
@@ -204,25 +204,6 @@
 		/>
 	</target>
 
-	<target name="gcupload">
-		<description>
-			Upload a package to Google Code.
-		</description>
-
-		<fail unless="gc.username" message="Missing property 'gc.username' from file 'my.ant.properties'." />
-		<fail unless="gc.password" message="Missing property 'gc.password' from file 'my.ant.properties'." />
-
-		<gcupload
-			username="${gc.username}"
-			password="${gc.password}"
-			projectname="${project.name}"
-			filename="${deploy.root.dir}/${deploy.package.name}"
-			targetfilename="${deploy.package.name}"
-			summary="${project.name} deployment package, version ${version.number}"
-			labels="Type-Archive, OpSys-All, Featured"
-		/>
-	</target>
-
 	<target name="-copy-testsuite-to-local-app-engine">
 		<copy todir="${deploy.root.dir}/testsuite" failonerror="true">
 			<fileset dir="${third-party.dir}/uxf/testsuite" />
@@ -243,7 +224,7 @@
 		=================
 	-->
 	<target name="pre-site" description="Executes processes needed prior to the actual project site generation.">
-		<copy todir="${tmp.dir}/site-in/docs" failonerror="true">
+		<copy todir="${tmp.dir}/site-in/docs" failonerror="true" filtering="true">
 			<fileset dir="${rdfa.src.dir}" />
 		</copy>
 	</target>
@@ -259,6 +240,107 @@
 		<replace dir="${tmp.dir}/site-out/samples" token="../../deploy/backplanejs" value="/backplanejs">
 			<include name="**/*.html"/>
 		</replace>
+	</target>
+
+	<target name="-compile" description="Create combined JS and CSS files from sources.">
+		<!--
+			Created a combined JS file.
+		-->
+		<exec executable="${sprocketize.app.name}" output="${tmp.dir}/${product.name}.js" failonerror="true" logError="true">
+			<arg value="-I" />
+			<arg value="." />
+			<arg value="-I" />
+			<arg value="build" />
+			<arg value="-I" />
+			<arg value="third-party" />
+			<arg value="-I" />
+			<arg value="third-party/uxf/src" />
+			<arg value="-I" />
+			<arg value="third-party/uxf/src/lib" />
+			<arg value="-I" />
+			<arg value="third-party/uxf/src/lib/backplane" />
+			<arg value="copyright.txt" />
+			<arg value="${build.dir}/platform-${platform.name}.js" />
+			<arg value="${build.dir}/platform-ui-${platform.name}.js" />
+			<arg value="${build.dir}/${product.name}.js" />
+			<arg value="-a${output.dir}/assets" />
+		</exec>
+		<copy file="${tmp.dir}/${product.name}.js" tofile="${output.dir}/${product.name}.js" failonerror="true" filtering="true" />
+
+		<!--
+			Created a combined CSS file.
+		-->
+		<concat destfile="${output.dir}/assets/${product.name}.css" force="no" eol="crlf">
+			<fileset dir="${output.dir}/assets">
+				<include name="**/*.css" />
+				<exclude name="lens/*.css" />
+				<exclude name="${product.name}.css" />
+			</fileset>
+		</concat>
+	</target>
+
+	<target name="-test-compile">
+		<description>
+			Create the unit test files, by concatenating the individual
+			unit tests.
+		</description>
+
+		<!--
+			YUI Unit Test Runner
+		-->
+		<concat destfile="${unit-tests.dir}/unit-test-runner.js" force="no" eol="crlf">
+			<fileset dir="${src.dir}/third-party/yui">
+				<include name="logger.js" />
+				<include name="yuitest.js" />
+			</fileset>
+			<fileset dir="${build.dir}/test">
+				<include name="unit-test-runner.js" />
+			</fileset>
+		</concat>
+
+		<!--
+			Backplane
+		-->
+		<concat destfile="${unit-tests.dir}/backplane/unit-tests.js" force="no" eol="crlf">
+			<fileset dir="${src.dir}/third-party/uxf/src/lib/backplane/_unit-tests">
+				<include name="**/*.js" />
+			</fileset>
+		</concat>
+		<copy file="${build.dir}/test/unit.html" tofile="${unit-tests.dir}/backplane/main.html" failonerror="true" />
+
+		<!--
+			Knowledgebase
+		-->
+		<concat destfile="${unit-tests.dir}/kb/unit-tests.js" force="no" eol="crlf">
+			<fileset dir="${src.dir}/kb/_unit-tests">
+				<include name="**/*.js" />
+			</fileset>
+		</concat>
+		<copy file="${build.dir}/test/unit.html" tofile="${unit-tests.dir}/kb/main.html" failonerror="true" />
+
+		<!--
+			RDFa
+		-->
+		<concat destfile="${unit-tests.dir}/rdfa/unit-tests.js" force="no" eol="crlf">
+			<fileset dir="${src.dir}/rdfa/_unit-tests">
+				<include name="**/*.js" />
+			</fileset>
+		</concat>
+		<copy file="${build.dir}/test/unit.html" tofile="${unit-tests.dir}/rdfa/main.html" failonerror="true" />
+
+		<!--
+			XForms
+		-->
+		<concat destfile="${unit-tests.dir}/xforms/unit-tests.js" force="no" eol="crlf">
+			<fileset dir="${src.dir}/third-party/uxf/unit-tests">
+				<include name="**/*.js" />
+				<exclude name="unit-test-loader.js" />
+			</fileset>
+			<fileset dir="${src.dir}/third-party/uxf/src/lib/functions">
+				<include name="**/ut-*.js" />
+			</fileset>
+		</concat>
+		<copy file="${build.dir}/test/unit.html" tofile="${unit-tests.dir}/xforms/main.html" failonerror="true" />
 	</target>
 
 	<target name="-pre-start-local-gae">
