Updated tasks to include integration testing, and added a few tests.

--- a/tools/GoogleAppEngine/app.yaml
+++ b/tools/GoogleAppEngine/app.yaml
@@ -28,6 +28,9 @@ handlers:
 - url: /unit-tests
   static_dir: unit-tests
 
+- url: /integration-tests
+  static_dir: @integration-tests.dir@
+
 - url: /tdd
   static_dir: @tdd.dir@
 
